--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
         "single"
       ]
     }
+  },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/gordeyev/mass-ad-block"
   }
 }
