--- a/app/manifest.chromium.json
+++ b/app/manifest.chromium.json
@@ -76,7 +76,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "mass ad block",
+    "default_title": "Mass Ad Block",
     "default_popup": "popup.html"
   }
 }
