--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
+    "gulp-less": "^3.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.2.0",
     "gulp-rename": "^1.2.2",
@@ -45,8 +46,8 @@
       ]
     }
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/gordeyev/mass-ad-block"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gordeyev/mass-ad-block"
   }
 }
