rename to Mass Fair Ads

--- a/app/manifest.chromium.json
+++ b/app/manifest.chromium.json
@@ -77,7 +77,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "Mass Ad Block",
+    "default_title": "Mass Fair Ads",
     "default_popup": "popup.html"
   }
 }
