--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-useref": "^3.0.8",
     "gulp-zip": "^3.2.0",
+    "less-plugin-autoprefix": "^1.5.1",
     "main-bower-files": "^2.11.1",
     "run-sequence": "^1.1.5",
     "wiredep": "^4.0.0",
