--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/gordeyev/mass-ad-block"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7"
   }
 }
