--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "url": "https://github.com/gordeyev/mass-ad-block"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1"
   }
 }
