--- a/app/manifest.chromium.json
+++ b/app/manifest.chromium.json
@@ -10,6 +10,7 @@
   "default_locale": "en",
   "background": {
     "scripts": [
+      "scripts/chromereload.js",
       "scripts/ublock/polyfill.js",
       "scripts/ublock/lib/punycode.js",
       "scripts/ublock/lib/publicsuffixlist.js",
