refactor methods and messaging

--- a/app/manifest.chromium.json
+++ b/app/manifest.chromium.json
@@ -28,7 +28,9 @@
       "scripts/ublock/cosmetic-filtering.js",
       "scripts/ublock/hnswitches.js",
       "scripts/ublock/ublock.js",
+      "scripts/mass.js",
       "scripts/ublock/messaging.js",
+      "scripts/mass-messaging.js",
       "scripts/ublock/profiler.js",
       "scripts/ublock/storage.js",
       "scripts/ublock/logger.js",
