--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.3",
+    "gulp-change": "^1.0.0",
     "gulp-clean-css": "^2.0.3",
     "gulp-eslint": "^2.0.0",
+    "gulp-ext-replace": "^0.3.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-json-editor": "^2.2.1",
+    "gulp-json-transform": "^0.4.2",
     "gulp-less": "^3.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.2.0",
